--- a/src/main/resources/templates/posts.html
+++ b/src/main/resources/templates/posts.html
@@ -17,6 +17,7 @@
         <em>Posted on: </em><span th:text="${p.date}"></span>
         <div><p th:text="${p.body}"></p></div>
     </post>
+    <a href="/posts/create.html" th:href="@{/posts/newpost}">Create New Post</a>
 </main>
 </body>
 </html>
