--- a/src/main/resources/templates/users/registration.html
+++ b/src/main/resources/templates/users/registration.html
@@ -1,10 +1,20 @@
 <!DOCTYPE html>
-<html>
-<head>
-    <title>Register User</title>
+<html xmlns:th="http://thymeleaf.org">
+<head th:replace="layout :: site-head">
 </head>
 <body>
-<h1>Registration</h1>
+<header th:replace="layout :: logged-out">
 
+</header>
+<h2>Register here:</h2>
+<form method="post" th:object="${User}">
+    <label for="username">Username:</label>
+    <input type="text" name="username" id="username">
+    <label for="password">Password:</label>
+    <input type="password" name="password" id="password">
+    <label for="fullname">Full Name:</label>
+    <input type="text" id="fullname" name="fullname">
+    <input type="submit" value="Register">
+</form>
 </body>
 </html>
