--- a/src/main/resources/templates/posts.html
+++ b/src/main/resources/templates/posts.html
@@ -16,6 +16,14 @@
         <h2 th:text="${p.title}"></h2>
         <em>Posted on: </em><span th:text="${p.date}"></span>
         <div><p th:text="${p.body}"></p></div>
+        <div>
+            <a th:href="@{/editPost(postId=${p.id})}">Edit</a>
+        </div>
+        <div>
+            <form th:method="delete" th:action="@{/deletePost(postId=${p.id})}">
+                <input type="submit" value="Delete">
+            </form>
+        </div>
     </post>
     <a href="/posts/create.html" th:href="@{/posts/newpost}">Create New Post</a>
 </main>
